# mapilio-kit-archived

./: .env  .gitmodules  CONTRIBUTING.md  README.md  docker-compose.yml  install.sh  max_extractor_install.sh  pyproject.toml  requirements.txt  setup.py
Docker/: Dockerfile
mapilio_kit/: __init__.py  __main__.py  api_v1.py  config.py  download.py  download_config.py  edit_config.py  exif_read.py  exif_write.py  geojson.py  gps_from_gopro360.py  gps_parser.py  gpx_from_exif.py  gpx_from_gopro.py  image_log.py  insert_MAPJson.py  login.py  process_csv_to_description.py  process_import_meta_properties.py  process_sequence_properties.py  process_video.py  processing.py  types.py  types_fmt.py  upload.py  upload_api_v1.py  uploader.py  utilities.py
mapilio_kit/commands/: authenticate.py  download.py  gopro_360max.py  gps_from_gopro360.py  image_and_csv_upload.py  process.py  process_csv.py  upload.py  video_process_and_upload.py
mapilio_tools/: __init__.py  __main__.py  api_v1.py  edit_config.py  exif_read.py  exif_write.py  ffprobe.py  geo.py  geojson.py  insert_MAPJson.py  login.py  process_geotag_properties.py  process_import_meta_properties.py  process_sequence_properties.py  process_video.py  types.py  upload.py  upload_api_v1.py  uploader.py  utilities.py
mapilio_tools/commands/: authenticate.py  process.py  process_and_upload.py  sample_video.py  upload.py
schema/: image_description_schema.geojson  image_description_schema.json  panoromic_image_description_shecma.csv
