[tool.poetry]
name = "mapilio-kit"
version = "1.3.9"
description = "MAPILIO upload Image/Video Import Pipeline and download your organization/projects"
authors = ["mapilio <murat@mapilio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "21.2.0"
certifi = "2021.10.8"
chardet = "3.0.4"
charset-normalizer = "2.0.7"
construct = "2.8.8"
ExifRead = "2.3.2"
gpxpy = "0.9.8"
idna = "2.7"
jsonschema = "4.1.1"
key = "0.4"
piexif = "1.1.3"
pymp4 = "1.1.0"
pynmea2 = "1.12.0"
pyrsistent = "0.18.0"
python-dateutil = "2.7.3"
requests = "2.20.0"
Shapely = "1.7.1"
six = "1.16.0"
tqdm = "4.62.3"
typing-extensions = "3.10.0.2"
tzwhere = "3.0.3"
gps-anomaly = "^0.1.8"
simple-term-menu = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mapilio_kit = "mapilio_kit.__main__:main"